Hides overflow-x for lumia fix

--- a/less/theme.less
+++ b/less/theme.less
@@ -18,6 +18,7 @@
 
 body {
     -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
 }
 
 @-ms-viewport {width: device-width}
